--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,3 +20,8 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: 'Create env file'
+      run: |
+          touch .env
+          echo API_KEY=${{ secrets.GROQ_AI_KEY }} >> .env
+          cat .env
