--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,7 +14,7 @@ jobs:
 
     runs-on: ubuntu-latest
     env:
-      AI_KEY: ${{ secrets.GROQ_AI_KEY }}
+      GROQ_AI_KEY: ${{ secrets.GROQ_AI_KEY }}
 
     steps:
     - uses: actions/checkout@v4
